src/test/ui/type-alias-impl-trait/issue-57611-trait-alias.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:17:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `FnOnce<(&X,)>`
              found type `FnOnce<(&X,)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
